frontend/frontend_test_error.log

> frontend@0.1.0 test
> react-scripts test

node.exe : FAIL 
src/App.test.js
At C:\Program Files\nod
ejs\npm.ps1:29 char:3
+   & $NODE_EXE 
$NPM_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (FAIL src/App.   
 test.js:String) []    
, RemoteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
  ΓùÅ Test suite 
failed to run

    Jest encountered 
an unexpected token

    Jest failed to 
parse a file. This 
happens e.g. when your 
code or its 
dependencies use 
non-standard 
JavaScript syntax, or 
when Jest is not 
configured to support 
such syntax.

    Out of the box 
Jest supports Babel, 
which will be used to 
transform your files 
into valid JS based on 
your Babel 
configuration.

    By default 
"node_modules" folder 
is ignored by 
transformers.

    Here's what you 
can do:
     ΓÇó If you are 
trying to use 
ECMAScript Modules, 
see https://jestjs.io/d
ocs/ecmascript-modules 
for how to enable it.
     ΓÇó If you are 
trying to use 
TypeScript, see https:/
/jestjs.io/docs/getting
-started#using-typescri
pt
     ΓÇó To have some 
of your "node_modules" 
files transformed, you 
can specify a custom "t
ransformIgnorePatterns"
 in your config.
     ΓÇó If you need a 
custom transformation 
specify a "transform" 
option in your config.
     ΓÇó If you simply 
want to mock your 
non-JS modules (e.g. 
binary assets) you can 
stub them out with the 
"moduleNameMapper" 
config option.

    You'll find more 
details and examples 
of these config 
options in the docs:
    https://jestjs.io/d
ocs/configuration
    For information 
about custom 
transformations, see:
    https://jestjs.io/d
ocs/code-transformation

    Details:

    C:\Users\satch\OneD
rive\Documents\GitHub\R
esume_Projects\minicode
hub-showcase\frontend\n
ode_modules\@marijn\fin
d-cluster-break\src\ind
ex.js:17
    export function 
isExtendingChar(code) {
    ^^^^^^

    SyntaxError: 
Unexpected token 
'export'

    [0m[31m[1m>[22m
[39m[90m 1 |[39m 
[36mimport[39m { [33
mSandpack[39m[33m,[3
9m [33mSandpackProvide
r[39m[33m,[39m [33m
SandpackLayout[39m[33
m,[39m [33mSandpackCo
deEditor[39m[33m,[39
m [33mSandpackPreview
[39m } [36mfrom[39m 
[32m"@codesandbox/sandp
ack-react"[39m[33m;[
39m
     [90m   |[39m 
[31m[1m^[22m[39m
     [90m 2 |[39m 
[36mimport[39m { 
dracula [36mas[39m 
draculaTheme } 
[36mfrom[39m [32m"@c
odesandbox/sandpack-the
mes"[39m[33m;[39m
     [90m 3 |[39m 
[36mimport[39m [33mR
eact[39m[33m,[39m { 
useState[33m,[39m 
useEffect[33m,[39m 
useRef[33m,[39m 
useMemo[33m,[39m 
useCallback } 
[36mfrom[39m [32m're
act'[39m[33m;[39m
     [90m 4 |[39m 
[36mimport[39m { [33
mBrowserRouter[39m 
[36mas[39m [33mRoute
r[39m[33m,[39m [33m
Routes[39m[33m,[39m 
[33mRoute[39m[33m,[
39m [33mLink[39m[33m
,[39m 
useParams[33m,[39m 
useNavigate[33m,[39m 
useLocation } 
[36mfrom[39m [32m're
act-router-dom'[39m[3
3m;[39m[0m

      at Runtime.create
ScriptFromCode (node_mo
dules/jest-runtime/buil
d/index.js:1728:14)
      at 
Object.<anonymous> (nod
e_modules/@codemirror/s
tate/dist/index.cjs:3:2
6)
      at 
Object.<anonymous> (nod
e_modules/@codemirror/a
utocomplete/dist/index.
cjs:3:13)
      at 
Object.<anonymous> (nod
e_modules/@codesandbox/
sandpack-react/dist/ind
ex.js:10:20)
      at 
Object.<anonymous> 
(src/App.js:1:1)
      at 
Object.<anonymous> 
(src/App.test.js:2:1)
      at TestScheduler.
scheduleTests (node_mod
ules/@jest/core/build/T
estScheduler.js:333:13)
      at runJest (node_
modules/@jest/core/buil
d/runJest.js:404:19)
      at _run10000 (nod
e_modules/@jest/core/bu
ild/cli/index.js:320:7)
      at runCLI (node_m
odules/@jest/core/build
/cli/index.js:173:3)

Test Suites: 1 failed, 
1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.277 s
Ran all test suites.
